[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]

[project]
name = "trssapi"
version = "0.0.1"
authors = [
  { name="tttpm", email="tttttttttpm@gmail.com" },
]
description = "Simple module for interaction with Team Run Skin Storage database."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "requests"
]

[project.urls]
Homepage = "https://github.com/tttpm/py-trss-api"